--- a/css/gallery.css
+++ b/css/gallery.css
@@ -105,6 +105,52 @@ img {
   background-position: center;
   height: 400px; }
 
+.graphic_item_01 {
+  grid-column: 2/-1;
+  grid-row: 1; }
+
+.graphic_item_02 {
+  grid-column: 1/3;
+  grid-row: 2; }
+
+.graphic_item_03 {
+  grid-column: 2/-1;
+  grid-row: 3; }
+
+.graphic_item_04 {
+  grid-column: 1/3;
+  grid-row: 4; }
+
+.graphic_item_images01 {
+  grid-column: 1/-1;
+  grid-row: 1;
+  margin-left: 30px;
+  background-image: url(../img/graphic/glasses/glasses_featured.png);
+  background-position: center;
+  height: 400px; }
+
+.graphic_item_images02 {
+  grid-column: 1/-1;
+  grid-row: 1;
+  margin-right: 30px;
+  background-image: url(../img/graphic/foodIcon/foodIcon_featured.png);
+  background-position: bottom;
+  height: 400px; }
+
+.graphic_item_images03 {
+  grid-column: 1/-1;
+  grid-row: 1;
+  margin-left: 30px;
+  background-image: url(../img/graphic/flatDesign/flat_featured.png);
+  height: 400px; }
+
+.graphic_item_images04 {
+  grid-column: 1/-1;
+  grid-row: 1;
+  margin-left: 30px;
+  background-image: url(../img/graphic/bobby/bobby4in1.jpg);
+  height: 400px; }
+
 .item_text_right {
   grid-column: 1/3; }
 
@@ -170,10 +216,10 @@ img {
 .portfolio_paragraph {
   padding: 2em 7em; }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
   .body_gallery {
-    grid-template-columns: 1fr; } }
-@media only screen and (max-width: 700px) {
+    grid-template-columns: 1fr; }
+
   .homepage_part01_grid {
     display: flex;
     flex-direction: column;
@@ -207,9 +253,20 @@ img {
     grid-template-rows: auto; }
 
   .homepage_part04_grid {
-    display: block; } }
+    display: block; }
+
+  .body_gallery .web_gallery_item .showcase_item {
+    margin: 0 !important; } }
+@media only screen and (max-width: 1000px) and (min-width: 801px) {
+  .portfolio_paragraph {
+    padding: 0; } }
 @media only screen and (max-width: 650px) and (min-width: 300px) {
   .gallery_text {
-    font-size: 8vw; } }
+    font-size: 8vw; }
+
+  .item_text {
+    height: auto;
+    font-size: 1.15em;
+    padding: 0.2em; } }
 
 /*# sourceMappingURL=gallery.css.map */
