--- a/css/styles.css
+++ b/css/styles.css
@@ -46,9 +46,10 @@ a {
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    width: 18%;
     font: 0.9em "Lato", sans-serif;
     color: #1A2930; }
+    .primary_nav .primary_nav_ul li {
+      padding: 0 0.5em; }
     .primary_nav .primary_nav_ul .primary_nav_item .primary_nav_item_link {
       color: #000;
       text-decoration: none;
@@ -366,6 +367,10 @@ footer {
     .primary_nav_flex ul {
       margin-right: 25px; }
 
+  .primary_nav_current {
+    color: #111;
+    font-weight: 500; }
+
   .primary_nav_effect li {
     float: left;
     position: relative;
@@ -398,14 +403,7 @@ footer {
     background-color: #DE1B1B; } }
 @media only screen and (max-width: 801px) and (min-width: 651px) {
   .homepage_bg_logo {
-    display: none; }
-
-  .primary_nav_flex {
-    align-items: center;
-    display: flex;
-    justify-content: space-between; }
-    .primary_nav_flex ul {
-      margin-right: 25px; } }
+    display: none; } }
 @media only screen and (max-width: 800px) {
   .homepage_part01_grid {
     display: flex;
@@ -528,7 +526,23 @@ footer {
     margin-top: 3em; }
 
   .homepage_part04_grid {
-    border: none !important; } }
+    border: none !important; }
+
+  .innerpage_web_detail {
+    justify-items: center;
+    padding: 2.5em 0;
+    border: none; }
+
+  .portfolio_paragraph {
+    padding: 0; }
+
+  .portfolio_skill_list {
+    grid-template-columns: 1fr;
+    font-size: 3vw;
+    justify-items: center;
+    grid-gap: 1em 0;
+    border: 1px solid #A9A9A9;
+    padding: 2em 0; } }
 @media only screen and (max-width: 321px) and (min-width: 280px) {
   .moblie_text_title {
     font-size: 10em;
