--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,6 +4,12 @@ img {
 .bold_body_text {
   font-weight: 900; }
 
+.item_hide {
+  display: none; }
+
+.item_show {
+  display: block; }
+
 .innerpage_gallery {
   display: grid;
   grid-template-columns: 1fr 1fr 12fr 1fr 1fr;
@@ -78,8 +84,7 @@ img {
   grid-column: 1/-1;
   grid-row: 1;
   margin-right: 30px;
-  background-image: url(../img/webgallery/ana/ana_featured.png);
-  background-position: bottom;
+  background-image: url(../img/webgallery/cssdemo/grid_featured.png);
   height: 400px; }
 
 .web_item_images03 {
@@ -125,7 +130,7 @@ img {
   grid-column: 1/-1;
   grid-row: 1;
   margin-left: 30px;
-  background-image: url(../img/graphic/glasses/glasses_featured.png);
+  background-image: url(../img/graphic/glasses/glasses_moblieView.png);
   background-position: center;
   height: 400px; }
 
@@ -133,7 +138,7 @@ img {
   grid-column: 1/-1;
   grid-row: 1;
   margin-right: 30px;
-  background-image: url(../img/graphic/foodIcon/foodIcon_featured.png);
+  background-image: url(../img/graphic/foodIcon/foodIcon_moblieView.png);
   background-position: bottom;
   height: 400px; }
 
@@ -141,7 +146,7 @@ img {
   grid-column: 1/-1;
   grid-row: 1;
   margin-left: 30px;
-  background-image: url(../img/graphic/flatDesign/flat_featured.png);
+  background-image: url(../img/graphic/flatDesign/flat_moblieView.png);
   height: 400px; }
 
 .graphic_item_images04 {
@@ -178,26 +183,55 @@ img {
   padding: 2.5em 5em;
   grid-gap: 3em; }
 
+.portfolio_link,
+.portfolio_link::after {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+
 .portfolio_link {
-  color: white;
-  padding: 2px 10px;
-  background-color: #DE1B1B;
-  justify-self: center;
-  font-size: 2.3em;
-  font-weight: 700; }
+  background: none;
+  border: 3px solid #1A2930;
+  border-radius: 5px;
+  color: #1A2930;
+  display: block;
+  font-weight: bold;
+  margin: 1em auto;
+  padding: 2em 6em;
+  position: relative;
+  text-transform: uppercase;
+  /* BUTTON 1 */ }
+  .portfolio_link::before, .portfolio_link::after {
+    background: #1A2930;
+    content: '';
+    position: absolute;
+    z-index: -1; }
   .portfolio_link:hover {
-    opacity: 0.8;
-    padding: 3px 15px;
-    transition: all .1s ease-in-out; }
+    cursor: pointer;
+    color: white; }
+  .portfolio_link::after {
+    height: 0;
+    left: 0;
+    top: 0;
+    width: 100%; }
+  .portfolio_link:hover:after {
+    height: 100%; }
 
 .portfolio_section_title {
   font-weight: 700;
   font-size: 2em;
+  background: none;
+  border: 3px solid #1A2930;
+  border-radius: 5px;
+  color: #1A2930;
+  display: block;
+  font-weight: bold;
+  margin: 1em auto;
+  position: relative;
   text-transform: uppercase;
-  background-color: #DE1B1B;
-  width: 5em;
-  text-align: center;
-  color: white; }
+  display: inline-block;
+  padding: 0.15em 1.3em; }
 
 .portfolio_skill_list {
   display: grid;
@@ -205,7 +239,8 @@ img {
   align-items: center;
   list-style: none;
   font: 100% "Lato", sans-serif;
-  padding: 0; }
+  padding: 0;
+  text-align: center; }
 
 .portfolio_center_text {
   padding: 1em 3em 1.5em 3em; }
@@ -215,6 +250,16 @@ img {
 
 .portfolio_paragraph {
   padding: 2em 7em; }
+
+.contact_me_show_grid {
+  grid-template-rows: auto !important; }
+
+.web_gallery_item:hover {
+  opacity: 0.7;
+  margin: 0; }
+  .web_gallery_item:hover div {
+    border-radius: 10px;
+    transition: 0.05s all ease-in; }
 
 @media only screen and (max-width: 800px) {
   .body_gallery {
