--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -8,6 +8,8 @@ $highlight-red: #DE1B1B;
 
 img {width: 100%}
 .bold_body_text { font-weight: 900;}
+.item_hide {display: none;}
+.item_show {display: block;}
 
 .innerpage_gallery {
 	display: grid;
@@ -99,8 +101,7 @@ img {width: 100%}
 	grid-column: 1/-1;
 	grid-row: 1;
 	margin-right: 30px;
-  	background-image: url(../img/webgallery/ana/ana_featured.png);
-  	background-position: bottom;
+  	background-image: url(../img/webgallery/cssdemo/grid_featured.png);
   	height: 400px
 }
 .web_item_images03{
@@ -149,7 +150,7 @@ img {width: 100%}
 	grid-column: 1/-1;
 	grid-row: 1;
 	margin-left: 30px;
-	background-image: url(../img/graphic/glasses/glasses_featured.png);
+	background-image: url(../img/graphic/glasses/glasses_moblieView.png);
   	background-position: center;
   	height: 400px
 }
@@ -157,7 +158,7 @@ img {width: 100%}
 	grid-column: 1/-1;
 	grid-row: 1;
 	margin-right: 30px;
-  	background-image: url(../img/graphic/foodIcon/foodIcon_featured.png);
+  	background-image: url(../img/graphic/foodIcon/foodIcon_moblieView.png);
   	background-position: bottom;
   	height: 400px
 }
@@ -165,7 +166,8 @@ img {width: 100%}
 	grid-column: 1/-1;
 	grid-row: 1;
 	margin-left: 30px;
-	background-image: url(../img/graphic/flatDesign/flat_featured.png);
+	background-image: url(../img/graphic/flatDesign/flat_moblieView.png);
+	//background-position: center;
   	height: 400px
 }
 .graphic_item_images04{
@@ -204,28 +206,81 @@ img {width: 100%}
 	grid-gap: 3em;
 }
 
-.portfolio_link{
-	color:white;
-	padding: 2px 10px;
-	background-color: $highlight-red;
-	justify-self: center;
-	font-size: 2.3em;
-	font-weight: 700;
+// .portfolio_link{
+// 	color:white;
+// 	padding: 2px 10px;
+// 	background-color: $highlight-red;
+// 	justify-self: center;
+// 	font-size: 2.3em;
+// 	font-weight: 700;
 
-	&:hover{
-	opacity: 0.8;
-	padding: 3px 15px;
-	transition: all .1s ease-in-out;
+// 	&:hover{
+// 	opacity: 0.8;
+// 	padding: 3px 15px;
+// 	transition: all .1s ease-in-out;
+// 	}
+// }
+
+.portfolio_link,
+.portfolio_link::after {
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.portfolio_link {
+  background: none;
+  border: 3px solid $dark-blue;
+  border-radius: 5px;
+  color: $dark-blue;
+  display: block;
+  font-weight: bold;
+  margin: 1em auto;
+  padding: 2em 6em;
+  position: relative;
+  text-transform: uppercase;
+  	&::before,
+	&::after {
+	  background: $dark-blue;
+	  content: '';
+	  position: absolute;
+	  z-index: -1;
+	}
+
+	&:hover {
+		cursor: pointer;
+	  	color: white;
+	}
+
+	/* BUTTON 1 */
+	&::after {
+	  height: 0;
+	  left: 0;
+	  top: 0;
+	  width: 100%;
+	}
+
+	&:hover:after {
+	  height: 100%;
 	}
 }
+
 .portfolio_section_title {
 	font-weight: 700;
 	font-size: 2em;
-	text-transform: uppercase;
-	background-color: $highlight-red;
-	width: 5em;
-	text-align: center;
-	color: white;
+  	background: none;
+  	border: 3px solid $dark-blue;
+  	border-radius: 5px;
+  	color: $dark-blue;
+  	display: block;
+  	font-weight: bold;
+  	margin: 1em auto;
+  	//padding: 2em 6em;
+  	position: relative;
+  	text-transform: uppercase;
+  	display: inline-block;
+  	padding: 0.15em 1.3em;
 }
 .portfolio_skill_list {
 	display: grid;
@@ -234,6 +289,7 @@ img {width: 100%}
 	list-style: none;
 	font: 100% $secondary-font;
 	padding: 0;
+	text-align: center;
 }
 
 .portfolio_center_text{
@@ -244,6 +300,18 @@ img {width: 100%}
 
 .portfolio_paragraph {
 	padding: 2em 7em;
+}
+
+.contact_me_show_grid {
+	grid-template-rows: auto !important;
+}
+
+.web_gallery_item:hover{
+    //transition: 0.05s ease-in;
+    opacity: 0.7;
+    margin: 0;
+
+    div {border-radius: 10px; transition: 0.05s all ease-in;}
 }
 
 
