--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,7 +8,6 @@ $highlight-red: #DE1B1B;
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,900');
 @import 'gallery.css';
-@import 'animation.css';
 
 // universal elements
 // * {
@@ -32,11 +31,13 @@ img {
 
 
 h2 {
-	font-size: 4.8em;
+	font-size: 6em;
 	font-weight: 900;
 	padding: 0;
 	margin: 0;
 }
+
+.huge-h2 {font-size: 10em;}
 
 h3 {
 	font: 100% $secondary-font;
@@ -54,6 +55,15 @@ a {
 	text-decoration: none;
 	cursor: pointer;
 }
+
+.text_link {
+	font-weight: 700;
+
+	&:hover {
+		color: $highlight-red;
+	}
+}
+
 
 .empty_border, .border_area {
 	border: 1px solid $light-grey;
@@ -130,8 +140,7 @@ a {
 	grid-column: 2/3;
 	justify-self: end;
 		.typing_header {margin:0;}
-		.bg_first_header1 {font-size: 8em;}
-		.bg_first_header2 {font-size: 6em;}
+		.bg_first_header1 {font-size: 5.2em;margin: 0;}
 	}
 
 	.homepage_bg_logo {
@@ -143,11 +152,14 @@ a {
 	}
 }
 
+
+
+
 .homepage_part02_grid {
 	margin: 0;
 	display: grid;
 	grid-template-columns: 3fr 1fr 4fr 4fr 1fr 3fr;
-	grid-template-rows: 300px 300px 200px;
+	// grid-template-rows: 300px 300px 200px;
 
 	height: 80vh;
 
@@ -486,6 +498,10 @@ a {
 
 }
 
+button {
+	background-color: transparent;
+}
+
 .round_btn:hover,.round_btn:active, .round_btn:focus {
 	border-color:  $highlight-red;
 	color:  $highlight-red;
@@ -493,6 +509,10 @@ a {
 
 .round_btn>*:hover,.round_btn>*:active, .round_btn>*:focus {
 	color:  $highlight-red;
+}
+
+.sent-hide {
+	display: none;
 }
 
 footer {
@@ -510,7 +530,167 @@ footer {
 
 }
 
+
+//typing animation
+
+
 @media only screen and (min-width: 802px) {
+	.css-typing h1 {
+	  border-right: .15em solid $dark-grey;
+	  white-space: nowrap;
+	  overflow: hidden;
+	}
+	.css-typing h1:nth-child(1) {
+	  width: 3.85em;
+	  -webkit-animation: type 2s steps(10, end);
+	  animation: type 2s steps(10, end);
+	  -webkit-animation-fill-mode: forwards;
+	  animation-fill-mode: forwards;
+	}
+
+	.css-typing h1:nth-child(2) {
+	  width: 2.28em;
+	  opacity: 0;
+	  -webkit-animation: type2 2s steps(10, end);
+	  animation: type2 2s steps(10, end);
+	  -webkit-animation-delay: 2s;
+	  animation-delay: 2s;
+	  -webkit-animation-fill-mode: forwards;
+	  animation-fill-mode: forwards;
+	}
+
+	.css-typing h1:nth-child(3) {
+	  width: 3.5em;
+	  opacity: 0;
+	  -webkit-animation: type3 3s steps(20, end), blink .5s step-end infinite alternate;
+	  animation: type3 3s steps(20, end), blink .5s step-end infinite alternate;
+	  -webkit-animation-delay: 4s;
+	  animation-delay: 4s;
+	  -webkit-animation-fill-mode: forwards;
+	  animation-fill-mode: forwards;
+	}
+	.css-typing h1:nth-child(4) {
+	  width: 3.5em;
+	  opacity: 0;
+	  -webkit-animation: type4 3s steps(20, end), blink .5s step-end infinite alternate;
+	  animation: type4 3s steps(20, end), blink .5s step-end infinite alternate;
+	  -webkit-animation-delay: 7.2s;
+	  animation-delay: 7.2s;
+	  -webkit-animation-fill-mode: forwards;
+	  animation-fill-mode: forwards;
+	}
+
+	@keyframes type {
+	  0% {
+	    width: 0;
+	  }
+	  99.9% {
+	    border-right: .15em solid $dark-grey;
+	  }
+	  100% {
+	    border: none;
+	  }
+	}
+
+	@-webkit-keyframes type {
+	  0% {
+	    width: 0;
+	  }
+	  99.9% {
+	    border-right: .15em solid $dark-grey;
+	  }
+	  100% {
+	    border: none;
+	  }
+	}
+
+	@keyframes type2 {
+	  0% {
+	    width: 0;
+	  }
+	  1% {
+	    opacity: 1;
+	  }
+	  99.9% {
+	    border-right: .15em solid $dark-grey;
+	  }
+	  100% {
+	    opacity: 1;
+	    border: none;
+	  }
+	}
+
+	@-webkit-keyframes type2 {
+	  0% {
+	    width: 0;
+	  }
+	  1% {
+	    opacity: 1;
+	  }
+	  99.9% {
+	    border-right: .15em solid $dark-grey;
+	  }
+	  100% {
+	    opacity: 1;
+	    border: none;
+	  }
+	}
+
+	@keyframes type3 {
+	  0% {
+	    width: 0;
+	  }
+	  1% {
+	    opacity: 1;
+	  }
+	  99.9% {
+	    border-right: .15em solid $dark-grey;
+	  }
+	  100% {
+	    opacity: 1;
+	    border: none;
+	  }
+	}
+
+	@-webkit-keyframes type3 {
+	  0% {
+	    width: 0;
+	  }
+	  1% {
+	    opacity: 1;
+	  }
+	  99.9% {
+	    border-right: .15em solid $dark-grey;
+	  }
+	  100% {
+	    opacity: 1;
+	    border: none;
+	  }
+	}
+	@keyframes type4 {
+		0% {
+		    width: 0;
+		  }
+		  1% {
+		    opacity: 1;
+		  }
+		  100% {
+		    opacity: 1;
+		  }
+		}
+
+	@keyframes blink {
+	  50% {
+	    border-color: transparent;
+	  }
+	}
+	@-webkit-keyframes blink {
+	  50% {
+	    border-color: tranparent;
+	  }
+	}
+
+
 	.primary_nav_flex {
 	    align-items: center;
 	    display: flex;
@@ -558,13 +738,25 @@ footer {
 			position: absolute;
 			top: 1.5em;
 			left: 15%;
-			width: 70%;
+			width: 60%;
 			height: 3px;
 			transform: scaleX(2);
 			background-color: $highlight-red;
 		} 
 	}
 
+	.aboutName{
+		height: 20vh;
+		font:6.6em $primary-font;
+		font-weight: 700;
+	}
+
+}
+
+@media only screen and (min-width: 810px) {
+	.homepage_part01_grid .homepage_bg_intro .bg_first_header1 {
+    font-size: 5.8em;
+}
 }
 
 @media only screen and (max-width: 801px) and (min-width: 651px) {
@@ -592,6 +784,7 @@ footer {
 		align-item: center;
 		justify-item:center;
 		text-align: center;
+		padding: 0 5em;
 	}
 	.homepage_work_part1 {margin:0;}
 	.homepage_part04_grid, .contact_me_grid {
@@ -610,6 +803,11 @@ footer {
 		grid-template-columns: 1fr;
 	}
 	.body_gallery .web_gallery_item .showcase_item { margin:0 !important;}
+	.aboutName{
+		height: 20vh;
+		font:5.5em $primary-font;
+		font-weight: 700;
+	}
 }
 
 @media only screen and (max-width: 800px) and (min-width: 320px) {
@@ -709,6 +907,9 @@ footer {
 		text-align: center;
 		width: auto;
 		font-size: 1em;
+		display: flex;
+		padding: 0;
+		justify-content: center;
 	}
 	.portfolio_paragraph {padding: 0;}
 	.portfolio_skill_list {
@@ -720,6 +921,7 @@ footer {
 		padding: 2em 0;
 	}
 	.homepage_part04_grid.contact_me_grid {margin-top: 30px;}
+
 }
 
 @media only screen and (max-width: 321px) and (min-width: 280px) {
