--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -779,12 +779,13 @@ footer {
 	}
 	.empty_border, .border_area {display: none;}
 	.homepage_work_intro_grid{
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
-		align-item: center;
-		justify-item:center;
-		text-align: center;
-		padding: 0 5em;
+		// grid-template-columns: 1fr;
+		// grid-template-rows: auto;
+		// align-item: center;
+		// justify-item:center;
+		// text-align: center;
+		// padding: 0 5em;
+		display: flex;
 	}
 	.homepage_work_part1 {margin:0;}
 	.homepage_part04_grid, .contact_me_grid {
@@ -880,7 +881,7 @@ footer {
 	}
 
 	.innerpage_context {font-size: 2vw;}
-	.innerpage_part1 {border: none;}
+	.innerpage_part1 {border: none;grid-column: 1/-1;}
 
 	//about me page
 	.moblie_text_title {font-size: 10em;}
@@ -921,7 +922,10 @@ footer {
 		padding: 2em 0;
 	}
 	.homepage_part04_grid.contact_me_grid {margin-top: 30px;}
-
+	.download_resume_btn {font-size: 2.2em;}
+	.web_item_03, .web_item_01, .web_item_05, .graphic_item_01, .graphic_item_03{grid-column: 1/3;}
+	.web_item_images04 {background-position: center;}
+	.graphic_item_images03 {background-position: center;}
 }
 
 @media only screen and (max-width: 321px) and (min-width: 280px) {
@@ -960,6 +964,10 @@ footer {
     	font: 3.3em "Lato", sans-serif;
 	}
 	.homepage_part04_grid.contact_me_grid {margin-top: 30px;}
+
+	.web_item_03, .web_item_01, .web_item_05, .graphic_item_01, .graphic_item_03{grid-column: 1/3;}
+	.web_item_images04 {background-position: center;}
+	.graphic_item_images03 {background-position: center;}
 }
 
 
